--- a/style2.css
+++ b/style2.css
@@ -69,8 +69,41 @@ h1 {
   background: var(--color4);
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%) rotate(346deg);
   width: 90px;
   padding: 4px;
   text-align: center;
+}
+p {
+  line-height: 24px;
+  margin: 20px 0;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 3;
+  overflow: hidden;
+  text-align: justify;
+}
+p::selection {
+  background: var(--color3);
+  color: var(--color4);
+}
+.checkbox-container {
+  display: flex;
+  justify-content: space-around;
+  margin: 20px 0 30px;
+}
+
+input[type="checkbox"] {
+}
+
+input[type="checkbox"]:checked {
+  display: none;
+}
+
+label {
+  cursor: pointer;
+  border: 1px solid var(--color1);
+  background: var(--color3);
+  padding: 10px;
+  border-radius: 5px;
 }
