--- a/style2.css
+++ b/style2.css
@@ -12,7 +12,7 @@
 }
 
 body {
-  background-color: salmon;
+  /* background-color: salmon; */
   background: url(./bg2.jpg) no-repeat center/cover;
   height: 100vh;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
@@ -23,12 +23,12 @@ body {
   justify-content: center;
 }
 .card {
-  background: rgba(0, 0, 0, 0.308);
+  background: rgba(0, 0, 0, 0.164);
   width: calc(100% - 50px);
   padding: 20px 20px 6px;
   box-shadow: 0px -2px 9px 5px #8faf5a;
   border-radius: 5px;
-  backdrop-filter: blur(5px);
+  backdrop-filter: blur(2px);
 }
 .card:before {
   content: "\2730";
@@ -94,10 +94,15 @@ p::selection {
 }
 
 input[type="checkbox"] {
+  display: none;
 }
 
-input[type="checkbox"]:checked {
-  display: none;
+input[type="checkbox"]:checked + label {
+  /* display: none; */
+  background: var(--color1);
+  color: var(--color3);
+  transform: scale(1.3);
+  filter: brightness(120%) blur(1px);
 }
 
 label {
@@ -106,4 +111,38 @@ label {
   background: var(--color3);
   padding: 10px;
   border-radius: 5px;
+  transition: 0.5s;
+  /* pour que l'utilisateur n'utilise pas le texte */
+  user-select: none;
+}
+
+.email {
+  text-align: center;
+  /* centrer les input avec text-align */
+  margin-bottom: 20px;
+}
+
+.email input {
+  padding: 10px;
+  border-radius: 5px;
+  outline: none;
+  border: 3px solid transparent;
+  transition: 0.3s;
+  text-align: center;
+  font-size: 1.1rem;
+  color: var(--color1);
+  width: 35%;
+  min-width: 150px;
+  max-width: 300px;
+}
+
+input[type="text"]:focus {
+  background: transparent;
+  border: 3px solid var(--color2);
+  border-radius: 100px;
+}
+
+input [type="text"]::placeholder {
+  color: var(--color3);
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
