--- a/style2.css
+++ b/style2.css
@@ -169,6 +169,8 @@ a {
   display: block;
   text-decoration: none;
   text-align: center;
+  opacity: 0.4;
+  transform: translateY(20px);
 }
 a:visited {
   /* color: var(--color1); */
