--- a/style2.css
+++ b/style2.css
@@ -21,7 +21,10 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  /* !!!! pour cacher tt ce qui dépasse (sort) du BODY!!!!!! */
+  overflow: hidden;
 }
+
 .card {
   background: rgba(0, 0, 0, 0.164);
   width: calc(100% - 50px);
@@ -30,6 +33,7 @@ body {
   border-radius: 5px;
   backdrop-filter: blur(2px);
 }
+
 .card:before {
   content: "\2730";
   position: absolute;
@@ -37,9 +41,34 @@ body {
   right: 20px;
   font-size: 2.4rem;
 }
+
 h1 {
   margin-bottom: 24px;
+  position: relative;
 }
+
+/* !!!!!!!!!!!TRES IMPORTANT!!!!!!! POUR CENTRER UNE BARRE et les ANIMATIONS!  */
+h1::after {
+  content: "";
+  position: absolute;
+  background: var(--color1);
+  height: 1px;
+  width: 100%;
+  bottom: -10px;
+  left: 50%;
+  transform: translateX(-50%) scaleX(0);
+  animation: h1anim 5s ease-in-out forwards;
+  /* transform-origin: center; */
+}
+
+/* !!!!!!!!VERY IMPORTANT!!!!! POUR FAIRE DES ANIMATIONS!!!!!!!! */
+
+@keyframes h1anim {
+  100% {
+    transform: translateX(-50%) scaleX(1);
+  }
+}
+
 .grid-container {
   display: grid;
   grid-template-columns: 20% 80%;
@@ -87,10 +116,14 @@ p::selection {
   background: var(--color3);
   color: var(--color4);
 }
+
+/* !!!!! ICI PERSPECTIVE SUR LE PARENT POUR LA 3D!!!!!!!!!!!!!!! */
 .checkbox-container {
   display: flex;
   justify-content: space-around;
   margin: 20px 0 30px;
+  /* !!!!!important, ne pas oublier la perspective sur le parent pr la 3d!!!! */
+  perspective: 40px;
 }
 
 input[type="checkbox"] {
@@ -114,6 +147,38 @@ label {
   transition: 0.5s;
   /* pour que l'utilisateur n'utilise pas le texte */
   user-select: none;
+}
+
+/* !!!!!!!!!!!!!!!!  ANIMATION SUR LABEL !!!!!!!!!!!!!! */
+label:first-of-type:hover {
+  animation: label1 1s infinite linear;
+}
+
+@keyframes label1 {
+  50% {
+    transform: scale(1.4);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+/* !!!!!!!!!!!!!!!!!! FAIRE LA 3D !!!!!!!!!!!!!!!!!!!!!!! */
+/* ici le Label 2 est le 4eme enfant de Checkbox container */
+label:nth-child(4):hover {
+  animation: label2 3s infinite;
+}
+/* Pour 3D: NE PAS OUBLIER LA PERSPECTIVE SUR LE PARENT!  ici CHECKBOX CONTAINER*/
+@keyframes label2 {
+  33% {
+    transform: translateZ(30px);
+  }
+  66% {
+    transform: translateZ(-40px);
+  }
+  100% {
+    transform: translateZ(0);
+  }
 }
 
 .email {
@@ -160,9 +225,22 @@ button {
   /* pour transition en entrer et en sortie faut copier dans "button" (comme ici) */
   transition: 0.4s;
 }
+
 button:hover {
   letter-spacing: 3px;
 }
+
+button:active {
+  transform: scale(1.2);
+  background: yellow;
+}
+
+button:hover + a,
+a:hover {
+  opacity: 1;
+  transform: translateY(0);
+}
+
 a {
   /* color: var(--color4); */
   color: green;
@@ -171,8 +249,76 @@ a {
   text-align: center;
   opacity: 0.4;
   transform: translateY(20px);
+  transition: 0.3s;
 }
+
 a:visited {
   /* color: var(--color1); */
   color: yellow;
+}
+
+img {
+  height: 40px;
+  position: absolute;
+  filter: drop-shadow(0px 6px 3px rgba(255, 255, 0, 0.6));
+  z-index: -1;
+  animation: spaceship 6s infinite linear;
+}
+
+@keyframes spaceship {
+  0% {
+    top: 2%;
+    left: 2%;
+    transform: rotate(90deg);
+  }
+  10% {
+    top: 6%;
+    left: 30%;
+    transform: rotate(90deg);
+  }
+  20% {
+    top: 9%;
+    left: 60%;
+    transform: rotate(90deg);
+  }
+  30% {
+    top: 0%;
+    left: 80%;
+    transform: rotate(90deg);
+  }
+  40% {
+    top: 20%;
+    left: 120%;
+    transform: rotate(90deg);
+  }
+  50% {
+    top: 50%;
+    left: 80%;
+    transform: rotate(90deg);
+  }
+  60% {
+    top: 90%;
+    left: 90%;
+    transform: rotate(90deg);
+  }
+  70% {
+    top: 110%;
+    left: 50%;
+    transform: rotate(90deg);
+  }
+  80% {
+    top: 85%;
+    left: 30%;
+    transform: rotate(90deg);
+  }
+  90% {
+    top: 50%;
+    left: 15%;
+    transform: rotate(90deg);
+  }
+  100% {
+    top: 2%;
+    left: 2%;
+    transform: rotate(90deg);
+  }
 }
